refactor: Code is rewritten to avoid redundant operations and cleansed. Also: jakarta.annotation-api:2.1.1 dependency is added.